--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile files('libs/preference-fragment-compat.jar')
     compile 'com.google.android.gms:play-services:6.1.11'
 
+    compile 'com.android.support:recyclerview-v7:+'
     compile 'com.android.support:cardview-v7:+'
     compile "com.android.support:appcompat-v7:21.0.+"
 }
