--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -19,6 +19,6 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:20+'
+    compile "com.android.support:appcompat-v7:21.0.+"
     compile fileTree(dir: 'libs', include: ['*.jar'])
 }
